@@ -18,7 +18,7 @@
  * @category  phpMyFAQ
  * @package   Setup
  * @author    Thorsten Rinne <thorsten@phpmyfaq.de>
- * @copyright 2005-2011 phpMyFAQ Team
+ * @copyright 2005-2012 phpMyFAQ Team
  * @license   http://www.mozilla.org/MPL/MPL-1.1.html Mozilla Public License Version 1.1
  * @link      http://www.phpmyfaq.de
  * @since     2005-07-31
@@ -285,6 +285,7 @@ category_id integer NOT NULL,
 question CLOB NOT NULL,
 created varchar(20) NOT NULL,
 is_visible char(1) default 'Y',
+answer_id INTEGER NOT NULL DEFAULT 0,
 PRIMARY KEY (id))";
 
 //faqright
