@@ -18,7 +18,7 @@
  * @package   Setup
  * @author    Thorsten Rinne <thorsten@phpmyfaq.de>
  * @author    Matteo Scaramuccia <matteo@scaramuccia.com>
- * @copyright 2005-2011 phpMyFAQ Team
+ * @copyright 2005-2012 phpMyFAQ Team
  * @license   http://www.mozilla.org/MPL/MPL-1.1.html Mozilla Public License Version 1.1
  * @link      http://www.phpmyfaq.de
  * @since     2005-01-11
@@ -281,13 +281,14 @@ PRIMARY KEY (id))";
 
 //faqquestions
 $query[] = "CREATE TABLE ".$sqltblpre."faqquestions (
-id integer NOT NULL,
+id INTEGER NOT NULL,
 username varchar(100) NOT NULL,
 email varchar(100) NOT NULL,
-category_id integer NOT NULL,
+category_id INTEGER NOT NULL,
 question text NOT NULL,
 created varchar(20) NOT NULL,
 is_visible char(1) default 'Y',
+answer_id INTEGER NOT NULL DEFAULT 0,
 PRIMARY KEY (id))";
 
 //faqright
