@@ -18,7 +18,7 @@
  * @package   Setup
  * @author    Adam Greene <phpmyfaq@skippy.fastmail.fm>
  * @author    Matteo Scaramuccia <matteo@scaramuccia.com>
- * @copyright 2004-2011 phpMyFAQ Team
+ * @copyright 2004-2012 phpMyFAQ Team
  * @license   http://www.mozilla.org/MPL/MPL-1.1.html Mozilla Public License Version 1.1
  * @link      http://www.phpmyfaq.de
  * @since     2004-12-10
@@ -287,6 +287,7 @@ category_id integer NOT NULL,
 question text NOT NULL,
 created varchar(20) NOT NULL,
 is_visible char(1) default 'Y',
+answer_id INTEGER NOT NULL DEFAULT 0,
 PRIMARY KEY (id))";
 
 //faqright
