@@ -7,6 +7,7 @@ This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.8.0-dev - 2012-
 - added improved advanced search in subcategories (Thorsten)
+- added possibility to close and delete open questions (Peter)
 - improved usability of administration backend (Thorsten)
 - improved setup (Thorsten)
 - improved security with salted passwords (Thorsten)
